Interim check-in: Improved license search and matching algorithm.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ball-license-maven-plugin/trunk@5672 b3e4a033-f9ea-474d-ac63-5dcbede9114a